# onefacture

./: .editorconfig  .gitignore  .golangci.yml  AGENTS.md  CONTRIBUTING.md  ISSUES.md  LICENSE  Makefile  README.md  RESEARCH.md  go.mod  go.sum
.github/workflows/: ci.yml  external-acceptance.yml  sandbox-smoke.yml  sdk-publish.yml
.lean-ctx/: graph.db  graph.meta.json
cmd/api/: main.go
cmd/genopenapi/: main.go
cmd/onefacture/: main.go  main_test.go
deploy/: Dockerfile  docker-compose.yml
docs/: landing.html
docs/architecture/: multi-jurisdiction.md
docs/backlog/: anchored-summary.md  github-issues-vagues-acceptance.json  (+4 more)
scripts/: audit_backlog_completion.rb  check_external_acceptance_env.sh  check_github_external_acceptance_config.sh  collect_external_acceptance_evidence.sh  create_external_evidence_bundle.sh  create_github_issues.sh  review_external_evidence_bundle.rb  smoke_backlog_completion_audit.sh  smoke_external_acceptance_env.sh  smoke_external_evidence_bundle.sh  smoke_external_evidence_collector.sh  smoke_external_evidence_review.sh  smoke_github_external_acceptance_config.sh  smoke_kms_gate_local.sh  smoke_live_pa_gate_local.sh  smoke_outcome_metrics_gate_local.sh  smoke_public_sandbox.sh  smoke_public_sandbox_local.sh  verify_backlog_acceptance_manifest.rb  verify_external_acceptance.sh  verify_external_evidence_bundle.sh  verify_external_gate_smokes.sh  verify_local_acceptance.sh  verify_sdk_release_artifacts.sh
sdks/python/: README.md  pyproject.toml
sdks/python/src/onefacture/: client.py
sidecar/: Dockerfile  requirements.txt
(+132 files in other folders)
