[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "onefacture"
version = "0.1.0"
description = "Python SDK for the onefacture API"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["httpx>=0.27"]

[project.urls]
Homepage = "https://github.com/yawo/onefacture"
